Added different bullet points

--- a/music/index.html
+++ b/music/index.html
@@ -10,7 +10,7 @@
 
         <img src="https://img.freepik.com/free-vector/elegant-musical-notes-music-chord-background_1017-20759.jpg?size=338&ext=jpg" height="250" width="250">
 
-        <ol type="a">
+        <ol type="A">
             <li>
                 <a href="../index.html">../index.html</a>
             </li>
