--- a/music/listings.html
+++ b/music/listings.html
@@ -10,7 +10,7 @@
 
         <img src="https://previews.123rf.com/images/iqoncept/iqoncept1509/iqoncept150900218/45886544-new-listing-words-on-a-home-or-house-for-sale-real-estate-sign-at-a-new-building-or-property-just-ad.jpg" height="250" width="250">
 
-        <ol type="a">
+        <ol type="1">
             <li>
                 <a href="../index.html">../index.html</a>
             </li>
